Fix Locale.of (Java 19+) crash